--- a/Frontend/open-wallet/src/styles.scss
+++ b/Frontend/open-wallet/src/styles.scss
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+:root {
+  --app-success: green;
+  --app-error: red;
+  --app-warning: yellow;
+}
