--- a/Frontend/open-wallet/src/app/modules/sign-in/sign-in.component.html
+++ b/Frontend/open-wallet/src/app/modules/sign-in/sign-in.component.html
@@ -1,14 +1,12 @@
+<div class="login-container">
+    <p-card styleClass="login-card">
+        <h2 class="login-title">Accedi al Sistema</h2>
 
-<div class="container text-center">
-  <div class="row">
-    <div class="col">
-    </div>
-    <div class="col">
-      <p-button label="Check" />
-
-    </div>
-    <div class="col">
-      Column
-    </div>
-  </div>
+        <p-button
+                label="Entra con SPID"
+                icon="pi pi-sign-in"
+                styleClass="spid-button"
+                (onClick)="onLogin()">
+        </p-button>
+    </p-card>
 </div>
