--- a/Frontend/open-wallet/src/styles.scss
+++ b/Frontend/open-wallet/src/styles.scss
@@ -2,8 +2,17 @@
 @import "primeicons/primeicons.css";
 
 :root {
+
   --app-success: green;
   --app-error: red;
   --app-warning: yellow;
+
+  --neutral--500: rgba(100, 103, 104, 1);
+  --neutral--700: rgba(50, 51, 52, 1);
+  --neutral--100: rgba(203, 204, 205, 1);
+  --neutral--600: rgba(75, 77, 78, 1);
+  --neutral--50: rgba(229, 230, 230, 1);
+  --neutral--20: rgba(242, 242, 243, 1);
+  --neutral--400: rgba(164, 166, 168, 1);
 }
 
