Create certificates page

--- a/Frontend/open-wallet/src/app/core/layout/header/header.component.html
+++ b/Frontend/open-wallet/src/app/core/layout/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="topbar">
-  <div class="logo">
-    <img src="/logo.png" alt="Open Wallet" />
+  <div class="logo pb-2">
+    <p-button label="Condividi accesso" icon="pi pi-share-alt" iconPos="right" />
   </div>
   <div class="spacer"></div>
   <i class="pi pi-user" style="font-size: 1.5rem"></i>
