--- a/Frontend/open-wallet/src/app/core/layout/sidebar/sidebar.component.html
+++ b/Frontend/open-wallet/src/app/core/layout/sidebar/sidebar.component.html
@@ -1,3 +1,6 @@
+<div>
+    <img src="assets/logo-wallet.png" alt="Logo Open Wallet">
+</div>
 <div class="d-flex flex-column gap-2">
     @for (item of items; track $index) {
     <p-button [icon]="item.icon" label="{{item.label}}" variant="text" severity="secondary" (onClick)="navigate(item.routerLink)" >
