--- a/Frontend/open-wallet/src/app/modules/login/login.html
+++ b/Frontend/open-wallet/src/app/modules/login/login.html
@@ -1,12 +1,13 @@
 <div class="login-container">
     <p-card styleClass="login-card">
-        <h2 class="login-title">Accedi al Sistema</h2>
+
+        <h5 class="login-title">Accedi al Sistema</h5>
 
         <p-button
                 label="Entra con SPID"
                 icon="pi pi-sign-in"
                 styleClass="spid-button"
-                (onClick)="onLogin()">
+                (click)="onLogin()">
         </p-button>
     </p-card>
 </div>
