--- a/Frontend/open-wallet/src/app/core/layout/sidebar/sidebar.component.html
+++ b/Frontend/open-wallet/src/app/core/layout/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
 </div>
 <div class="d-flex flex-column gap-2">
     @for (item of items; track $index) {
-    <p-button [icon]="item.icon" label="{{item.label}}" variant="text" severity="secondary" (onClick)="navigate(item.routerLink)" >
+    <p-button [icon]="item.icon" label="{{item.label}}" variant="text" severity="secondary" [ngClass]="{ 'active-btn': item?.key === activeKey }"  (onClick)="handleClick(item)">
     </p-button>
     }
 </div>
