--- a/Frontend/open-wallet/src/app/components/log-access-state/log-access-state.html
+++ b/Frontend/open-wallet/src/app/components/log-access-state/log-access-state.html
@@ -1,1 +1,5 @@
-<p-chip [ngClass]="status()">{{status()}}</p-chip>
+<p-chip [ngClass]="status()">
+    <span class="ts-caption-bold">
+        {{status()}}
+    </span>
+</p-chip>
