--- a/Frontend/open-wallet/src/app/modules/certificates/certificates.component.html
+++ b/Frontend/open-wallet/src/app/modules/certificates/certificates.component.html
@@ -2,7 +2,7 @@
     <p-button label="Nuova certificazione" icon="pi pi-plus" (click)="showDialog()"/>
 </div>
 
-<p-dialog header="Carica nuova certificazione"
+<p-dialog header="Aggiungi certificazione"
           [(visible)]="visible" [modal]="true"
           [style]="{ width: '30vw' }" [draggable]="false"
           [resizable]="false">
