--- a/Frontend/open-wallet/src/app/core/layout/header/header.component.html
+++ b/Frontend/open-wallet/src/app/core/layout/header/header.component.html
@@ -1,7 +1,15 @@
 <header class="topbar">
-  <div class="logo pb-2">
-    <p-button label="Condividi accesso" icon="pi pi-share-alt" iconPos="right" />
-  </div>
-  <div class="spacer"></div>
-  <i class="pi pi-user" style="font-size: 1.5rem"></i>
+    <div class="logo pb-2">
+        <p-button label="Condividi accesso" icon="pi pi-share-alt" iconPos="right"/>
+    </div>
+    <div class="spacer"></div>
+    <div class="d-flex gap-3">
+        <div>
+            <i class="pi pi-user" style="font-size: 1.5rem"></i>
+        </div>
+        <div>
+            {{ userService.formatName() }}
+        </div>
+    </div>
+
 </header>
