--- a/Frontend/open-wallet/src/app/modules/certificates/certificates.component.html
+++ b/Frontend/open-wallet/src/app/modules/certificates/certificates.component.html
@@ -1,25 +1,40 @@
 <div class="d-flex justify-content-end pb-4">
-    <p-button label="Nuova certificazione" icon="pi pi-plus" (click)="showDialog()"/>
+    <p-button label="Nuova certificazione" icon="pi pi-plus" (click)="showDialog()" />
 </div>
 
-<p-dialog header="Aggiungi certificazione"
-          [(visible)]="visible" [modal]="true"
-          [style]="{ width: '30vw' }" [draggable]="false"
-          [resizable]="false">
+<p-table [value]="certificates" [tableStyle]="{ 'min-width': '60rem' }">
+    <ng-template pTemplate="header">
+        <tr>
+            <th>ID</th>
+            <th>Cert ID</th>
+            <th>Nome certificato</th>
+            <th>Nome file</th>
+            <th>Stato</th>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-cert>
+        <tr>
+            <td>{{ cert.blockNumber }}</td>
+            <td>{{ cert.certId }}</td>
+            <td>{{ cert.alias}}</td>
+            <td>{{ cert.fileName }}</td>
+            <td>
+                <app-log-access-state [status]="cert.status"></app-log-access-state>
+            </td>
+        </tr>
+    </ng-template>
+</p-table>
+
+<p-dialog header="Aggiungi certificazione" [(visible)]="visible" [modal]="true" [style]="{ width: '30vw' }"
+    [draggable]="false" [resizable]="false">
 
     <div class="flex flex-wrap gap-6 items-center justify-between">
         <div class="row">
-            <p-fileupload #fu mode="basic"
-                          chooseLabel="Scegli il certificato" chooseIcon="pi pi-upload"
-                          name="demo[]"
-                          accept=".pdf,application/pdf"
-                          maxFileSize="1000000"
-                          (onSelect)="onUpload($event)"/>
+            <p-fileupload #fu mode="basic" chooseLabel="Scegli il certificato" chooseIcon="pi pi-upload" name="demo[]"
+                accept=".pdf,application/pdf" maxFileSize="1000000" (onSelect)="onUpload($event)" />
         </div>
         <div class="pt-4 d-flex justify-content-end">
-            <p-button label="Carica"
-                      [disabled]="!file"
-                      (onClick)="onUploadFile()" severity="primary"/>
+            <p-button label="Carica" [disabled]="!file" (onClick)="onUploadFile()" severity="primary" />
         </div>
     </div>
 </p-dialog>
