--- a/Frontend/open-wallet/src/app/components/log-access-state/log-access-state.html
+++ b/Frontend/open-wallet/src/app/components/log-access-state/log-access-state.html
@@ -1,5 +1,5 @@
-<p-chip [ngClass]="status()">
+<p-chip [ngClass]="type()">
     <span class="ts-caption-bold">
-        {{status()}}
+        {{label()}}
     </span>
 </p-chip>
