--- a/Frontend/open-wallet/src/styles.scss
+++ b/Frontend/open-wallet/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "primeicons/primeicons.css";
+@import "../src/app/theme/typography";
 
 :root {
 
@@ -22,3 +23,13 @@
   --neutral--400: rgba(164, 166, 168, 1);
 }
 
+p-table {
+
+  th {
+    @extend .ts-caption-bold;
+  }
+
+  td {
+    @extend .ts-caption;
+  }
+}
