--- a/Frontend/open-wallet/src/app/modules/certificates/certificates.component.html
+++ b/Frontend/open-wallet/src/app/modules/certificates/certificates.component.html
@@ -1,53 +1,58 @@
 <div class="d-flex justify-content-end pb-4">
-    <p-button label="Nuova certificazione" icon="pi pi-plus" (click)="showDialog()" />
+  <p-button label="Nuova certificazione" icon="pi pi-plus" (click)="showDialog()"/>
 </div>
 
 <p-table [value]="data" [paginator]="true" [rows]="5" [responsiveLayout]="'scroll'">
-    <ng-template pTemplate="header">
-        <tr>
-            <th>Data e Ora</th>
-            <th>Utente</th>
-            <th>Tipo Accesso</th>
-            <th>Certificato</th>
-            <th>Stato</th>
-            <th>IP / Località</th>
-        </tr>
-    </ng-template>
+  <ng-template pTemplate="header">
+    <tr>
+      <th>Data e Ora</th>
+      <th>Utente</th>
+      <th>Tipo Accesso</th>
+      <th>Certificato</th>
+      <th>Stato</th>
+      <th>IP / Località</th>
+      <th>Download</th>
+    </tr>
+  </ng-template>
 
-    <ng-template pTemplate="body" let-log>
-        <tr>
-            <td>{{ log.date | date:'dd/MM/yyyy HH:mm' }}</td>
-            <td>{{ log.user }}</td>
-            <td>{{ log.accessType }}</td>
-            <td>{{ log.certificate.name }}</td>
-            <td>
-                <app-log-access-state [status]="log.status"></app-log-access-state>
-            </td>
-            <td>{{ log.ip }}
-                @if (log.location) {
-                {{ log.location }}
-                }
-            </td>
-        </tr>
-    </ng-template>
+  <ng-template pTemplate="body" let-log>
+    <tr (click)="showDetail(log.id)">
+      <td>{{ log.date | date:'dd/MM/yyyy HH:mm' }}</td>
+      <td>{{ log.user }}</td>
+      <td>{{ log.accessType }}</td>
+      <td>{{ log.certificate.name }}</td>
+      <td>
+        <app-log-access-state [status]="log.status"></app-log-access-state>
+      </td>
+      <td>{{ log.ip }}
+        @if (log.location) {
+          {{ log.location }}
+        }
+      </td>
+      <td>
+        <p-button icon="pi pi-download" severity="secondary" variant="text" (onClick)="download(log.id)"></p-button>
+      </td>
+
+    </tr>
+  </ng-template>
 </p-table>
 
 <p-dialog header="Carica nuova certificazione" [(visible)]="visible" [modal]="true"
-    [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }" [style]="{ width: '60vw' }" [draggable]="false"
-    [resizable]="false">
+          [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }" [style]="{ width: '60vw' }" [draggable]="false"
+          [resizable]="false">
 
-    <div class="flex flex-wrap gap-6 items-center justify-between">
-        <p-toast />
-        <div class="row">
-            <div class="col-6">
-                <p-fileupload #fu mode="basic" chooseLabel="Scegli il certificato" chooseIcon="pi pi-upload"
-                    name="demo[]" url="https://www.primefaces.org/cdn/api/upload.php" accept=".pdf,application/pdf"
-                    maxFileSize="1000000" (onUpload)="onUpload($event)" />
-            </div>
-            <div class="col-6 d-flex justify-content-end">
-                <p-button label="Carica" (onClick)="fu.upload()" severity="secondary" />
-            </div>
-        </div>
-
+  <div class="flex flex-wrap gap-6 items-center justify-between">
+    <p-toast/>
+    <div class="row">
+      <div class="col-6">
+        <p-fileupload #fu mode="basic" chooseLabel="Scegli il certificato" chooseIcon="pi pi-upload"
+                      name="demo[]" url="https://www.primefaces.org/cdn/api/upload.php" accept=".pdf,application/pdf"
+                      maxFileSize="1000000" (onUpload)="onUpload($event)"/>
+      </div>
+      <div class="col-6 d-flex justify-content-end">
+        <p-button label="Carica" (onClick)="fu.upload()" severity="secondary"/>
+      </div>
     </div>
+
+  </div>
 </p-dialog>
