--- a/Frontend/open-wallet/src/app/modules/certificates/certificates.component.html
+++ b/Frontend/open-wallet/src/app/modules/certificates/certificates.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-end pb-4">
-    <p-button label="Nuova certificazione" icon="pi pi-plus" (click)="showDialog()" />
+    <p-button label="Nuova certificazione" icon="pi pi-plus" (click)="showDialog()"/>
 </div>
 
 <p-table [value]="certificates" [tableStyle]="{ 'min-width': '60rem' }">
@@ -16,17 +16,18 @@
         <tr>
             <td>{{ cert.blockNumber }}</td>
             <td>{{ cert.certId }}</td>
-            <td>{{ cert.alias}}</td>
+            <td>{{ cert.alias }}</td>
             <td>{{ cert.fileName }}</td>
             <td>
-                <app-log-access-state [status]="cert.status"></app-log-access-state>
+                <app-log-access-state [type]="cert.status"
+                                      [label]="('CERTIFICATES.' +  cert.status) | translate"></app-log-access-state>
             </td>
         </tr>
     </ng-template>
 </p-table>
 
 <p-dialog header="Aggiungi certificazione" [(visible)]="visible" [modal]="true" [style]="{ width: '30vw' }"
-    [draggable]="false" [resizable]="false">
+          [draggable]="false" [resizable]="false">
 
     <div class="flex flex-wrap gap-6 items-center justify-between">
         <div class="row">
@@ -39,17 +40,22 @@
                     <label for="alias">Nome certificato</label>
                 </p-floatlabel>
             </div>
-            <div class="col-12">
+            <div class="col-12" style="display: none;">
                 <p-fileupload #fu mode="basic"
                               chooseLabel="Scegli il certificato" chooseIcon="pi pi-upload"
                               name="demo[]"
                               accept=".pdf,application/pdf"
                               maxFileSize="1000000"
                               (onSelect)="onUpload($event)"/>
+
+                <p-button label="Scegli il certificato"
+                          (onClick)="fu.upload()" severity="success"/>
+
+
             </div>
         </div>
         <div class="pt-4 d-flex justify-content-end">
-            <p-button label="Carica" [disabled]="!file || !alias" (onClick)="onUploadFile()" severity="success" />
+            <p-button label="Carica" [disabled]="!file || !alias" (onClick)="onUploadFile()" severity="success"/>
         </div>
     </div>
 </p-dialog>
